import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.0'
    id 'io.spring.dependency-management' version '1.1.0'
    /* 코틀린 플러그인 */
    id 'org.jetbrains.kotlin.jvm' version '1.8.0-Beta'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    /* 코틀린 의존성 */
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testImplementation "org.assertj:assertj-core:3.21.0"
}

tasks.withType(KotlinCompile) {
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_17
        javaParameters = true
        freeCompilerArgs = ["-Xjvm-default=all"]
    }
}

test {
    useJUnitPlatform {
        includeEngines "junit-jupiter"
    }
    testLogging {
        events "skipped", "failed"
    }
}

